# correiospkg

./: .gitignore  README.md  env.txt  pyproject.toml
.github/workflows/: deploy.yaml
apps/encomendas/: apps.py  urls.py  views.py
apps/encomendas/templates/encomendas/: 404.html  encomendas.html  not_found.html
core/: settings.py  urls.py
src/: base.html  footer.html
src/css/: output.css
