[tool.poetry]
authors = ["Fábio S. Pedro"]
description = "Consulta por código de rastreio dos Correios para encomendas online."
name = "CorreiosPKG"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
django = "^5.1"
python = "^3.11.9"
python-decouple = "^3.8"
requests = "^2.32.3"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.taskipy.tasks]
run = {cmd = 'python manage.py runserver', help = '- Executa o servidor local da aplicação.'}
tail = {cmd = 'tailwindcss.exe -i ./src/css/input.css -o ./src/css/output.css --watch', help = '- Monitora e gera o CSS Output.'}
